map and align fix

--- a/css/bootstrap-4.4.1.css
+++ b/css/bootstrap-4.4.1.css
@@ -53,7 +53,10 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 }
 
 body {
-    margin: 0;
+    margin-top: 0%;
+    margin-right: 0%;
+    margin-left: 0%;
+    margin-bottom: 0%;
     font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
     font-size: 1rem;
     font-weight: 400;
@@ -169,8 +172,8 @@ a:not([href]) {
 }
 
 a:not([href]):hover {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 pre,
@@ -387,8 +390,9 @@ h6, .h6 {
 }
 
 .lead {
-  font-size: 1.25rem;
-  font-weight: 300;
+    font-size: 1.25rem;
+    font-weight: 300;
+    text-align: center;
 }
 
 .display-1 {
@@ -410,9 +414,10 @@ h6, .h6 {
 }
 
 .display-4 {
-  font-size: 3.5rem;
-  font-weight: 300;
-  line-height: 1.2;
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+    text-align: center;
 }
 
 hr {
