--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -42,6 +42,7 @@ nav {
     width: 50%;
     text-align: right;
     margin-right: 25px;
+    margin-top: 10px;
 }
 header nav ul {
 	list-style: none;
@@ -125,13 +126,13 @@ ul li:hover a {
 }
 /* About Section */
 .text_column {
-    width: 29%;
-    text-align: justify;
+    width: 33%;
+    text-align: center;
     font-weight: lighter;
     line-height: 25px;
     float: left;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
     color: #A3A3A3;
     background-color: inherit;
 }
@@ -148,6 +149,8 @@ ul li:hover a {
     color: #717070;
     margin-bottom: 5px;
     margin-left: auto;
+    margin-right: auto;
+	
 }
 .stats2 {
     color: #717070;
@@ -157,7 +160,6 @@ ul li:hover a {
 }
 
 .gallery {
-    clear: both;
     display: inline-block;
     width: 100%;
     background-color: #FFFFFF;
@@ -234,8 +236,8 @@ footer .footer_column h3 {
 	text-align: center;
 }
 footer .footer_column p {
-	color: #717070;
-	background-color: #FFFFFF;
+    color: #717070;
+    background-color: #B3B3B3;
 }
 .cards {
     width: 100%;
@@ -244,13 +246,14 @@ footer .footer_column p {
     max-height: 250px;
 }
 footer .footer_column p {
-	padding-left: 30px;
-	padding-right: 30px;
-	text-align: justify;
-	line-height: 25px;
-	font-weight: lighter;
-	margin-left: 20px;
-	margin-right: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: justify;
+    line-height: 25px;
+    font-weight: lighter;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 14px;
 }
 .button {
 	width: 200px;
